Added icons & fonts along with developed game logic, also cascaded css & FLatList has been implemented.

--- a/app.json
+++ b/app.json
@@ -4,10 +4,8 @@
     "slug": "GuessTheNumber",
     "version": "1.0.0",
     "orientation": "portrait",
-    
     "userInterfaceStyle": "light",
     "splash": {
-      
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,12 +14,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        
         "backgroundColor": "#ffffff"
       }
     },
-    "web": {
-      
-    }
+    "web": {},
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
