--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "GuessTheNumber",
     "slug": "GuessTheNumber",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "userInterfaceStyle": "light",
     "splash": {
       "resizeMode": "contain",
